Adicionado estilo inicial para portfólio, e remaejando informações pertinentes

--- a/index.html
+++ b/index.html
@@ -4,35 +4,38 @@
     <head>
         <meta charset="UTF-8">
         <title>Seja bem vindo ao portfólio de Nicholas Torres</title>
+        <link rel="stylesheet" type="text/css" href="estilos/style.css">
     </head>
 
     <body>
-        <h1>Nicholas Torres Jatobá de Vasconcelos</h1>
+        <h1 id="nome">Nicholas Torres Jatobá de Vasconcelos</h1>
         <ul>
             <li><a href="#sobre">Sobre mim</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#citação">Citação Favorita</a></li>
         </ul>
-        <img src="https://scontent.fmcz3-1.fna.fbcdn.net/v/t1.0-9/19225025_1484782291581032_4367452168358136311_n.jpg?_nc_cat=101&_nc_sid=85a577&_nc_ohc=kamZaVvh-FAAX_XcLnN&_nc_ht=scontent.fmcz3-1.fna&oh=f7892636105e88c67b8e7a601b015413&oe=5F640CC2"
+        <img class="fotos"src="https://scontent.fmcz3-1.fna.fbcdn.net/v/t1.0-9/19225025_1484782291581032_4367452168358136311_n.jpg?_nc_cat=101&_nc_sid=85a577&_nc_ohc=kamZaVvh-FAAX_XcLnN&_nc_ht=scontent.fmcz3-1.fna&oh=f7892636105e88c67b8e7a601b015413&oe=5F640CC2"
         alt="Imagem da foto de portfólio de Nicholas Torres"
         width="150px"
         >
         <br>
         <h3 id="sobre">Informações sobre mim</h3>
         <p>
-            <strong>Apaixonado</strong> por computação e programação em geral, super pro-ativo em tudo que faz<br>Formando em Bacharelado em Sistemas de Informação<br> Fui monitor em estrutura de dados pelo Ifal e com experiência em três estágios. 
-            <br>Brasileiro, nascido e criado em Maceió Alagoas.
+            <span class="destaque">Apaixonado</span> por computação e programação em geral, super pro-ativo em tudo que faz<br>Formando em Bacharelado em Sistemas de Informação<br> Fui monitor em estrutura de dados pelo Ifal e com experiência em três estágios. 
+            <br>Brasileiro, nascido e criado em Maceió Alagoas.<br>
+            Aluno da Trybe &lt3
         </p>
         <h3 id="habilidades">Habilidades</h3>
         <p>
-            Facilidade em aprender, <strong>ótimo com estrutura de dados</strong>, redes, base de dados e programação.<br>
-            Desenvolvedor FULL-STACK apaixonado pelo que faz e em um eterno aprendizado.<br>
-            Aluno da Trybe &lt3
+            Facilidade em aprender, <span class="destaque">ótimo com estrutura de dados</span>, redes, base de dados e programação.<br>
+            Desenvolvedor FULL-STACK apaixonado pelo que faz.<br>
+            Em um eterno aprendizado.<br>
+            
         </p>
-        <img src="imagens/eu.jpg" alt="Imagem de Nicholas sorridente" width="150px">
+        <img class="fotos" src="imagens/eu.jpg" alt="Imagem de Nicholas sorridente" width="150px">
 
-        <p id="citação">
-           <em> Esvazie sua xícara primeiro, só então você poderá provar meu chá.<br>
+        <p id="citação"><em>
+           Esvazie sua xícara primeiro, só então você poderá provar meu chá.<br>
             Afinal de contas a utilidade da xícara está em poder esvaziar-se.<br>
             Abra sua mente para receber novas idéias.</em>
             <br>
